# larry-rgb

./: .gitignore  README.rst  larry_rgb.py  pyproject.toml
src/larry_rgb/: __init__.py  colorlib.py  config.py  hardware.py
tests/: __main__.py  lib.py  test_colorlib.py  test_config.py  test_hardware.py  test_larry_rgb.py  tests.py
