[project]
name = "larry-rgb"
dynamic = ["version"]
description = "Larry plugin for openrgb"
authors = [
    {name = "Albert Hopkins", email = "marduk@letterboxes.org"},
]

dependencies = [
    "openrgb-python>=0.2.15",
    "larry @ git+https://github.com/enku/larry.git",
]
requires-python = ">=3.11"
readme = "README.rst"
license = {text = "MIT"}

[project.entry-points."larry.plugins"]
larry_rgb = "larry_rgb:plugin"

[project.urls]
homepage = "https://github.com/enku/larry-rgb"
repository = "https://github.com/enku/larry-rgb"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.coverage.run]
source = ["larry_rgb", "tests"]

[tool.pylint.design]
# Maximum number of arguments for function / method.
max-args = 10
max-positional-arguments = 10

[tool.pylint.variables]
init-import = "yes"

[tool.black]
skip-magic-trailing-comma = true

[tool.pdm]
version = { source = "scm" }

[tool.pdm.scripts]
tests = "python -m coverage run -m tests --failfast --verbose"
lint = "pylint src/larry_rgb tests"


[dependency-groups]
dev = [
    "black>=22.10.0",
    "isort>=5.10.1",
    "mypy>=0.982",
    "pylint>=2.15.5",
    "coverage>=6.5.0",
    "types-Pillow>=9.4.0.2",
    "unittest-fixtures>=2.0.0",
]
